# GNN-Surrogate

./: .gitignore  LICENSE  README.md
model/: discriminator.py  eval.py  eval.sh  generator.py  graph.py  infer.py  layer.py  main.py  mpas.py  resblock.py  sensitivity.py  sensitivity.sh  train.sh  utils.py
model/eval/: eval_img.py  eval_img.sh  nearest_neighbor.py  rbf_eval.py  rbf_eval.sh  rbf_train.py  rbf_train.sh  rbf_utils.py  resample.py  stack.py
mpas_ght/: CMakeLists.txt
mpas_ght/src/: GHT.cpp  GHT.h  adjMat.py  adjMat.sh  cnpy.cpp  main.cpp
mpas_graph/: CMakeLists.txt
mpas_graph/src/: cell.cpp  coarsening.cpp  coarsening.h  edge.cpp  edge.h  graph.cpp  graph.h  main.cpp
mpas_perm/: CMakeLists.txt
mpas_perm/src/: cnpy.h  mesh.h  perm.cpp
mpas_permBack/: CMakeLists.txt
mpas_permBack/src/: cell.h  def.h  mesh.h  permBack.cpp
prepost/: raw2res.py  res2ght.py  res2raw.py
